# skeleton-abstraction-of-point-cloud-by-voxel-thinning

./: .gitignore  CMakeLists.txt  LICENSE  README.md
201203 executable/: tree_cross.ply
201203 source code/: CmakeLists.txt  cloudInitialization.cpp  cloudVoxelization.h  fileManager.cpp  inputBoundaryBox.cpp  inputVoxelKey.cpp  inputVoxelKey.h  voxel3DThinning.h  voxelBasic.h  voxelProcessing.h
src/: cloudInitialization.cpp  cloudInitialization.h  cloudVoxelization.cpp  fileManager.cpp  fileManager.h  inputBoundaryBox.h  pointcloud_skeleton_extractor.cpp  skeletonAnalysis.cpp  skeletonAnalysis.h  voxel3DThinning.cpp  voxelBasic.cpp  voxelKeyBasic.cpp  voxelKeyBasic.h  voxelProcessing.cpp  voxelViewer.cpp  voxelViewer.h
